# UAV_MBSE

./: .coverage  .gitignore  AreaIntegrals-GreenStokes.nb  Export to Python.nb  FlightSim.py  GUI_UAD.py  IngEconomica.py  LICENSE  README.md  SolidWorksVBA.py  XML_to_dict.py  aero_surface_importer.py  airfoil_calculator.py  consts.py  geometry_tools.py  main.py  main_MBSE.py  makefile  output.pstats  output_graph.dot  propeller_importer.py  pyproject.toml  requirements.txt  requirements_base.txt  requirements_dev.txt  requirements_full.txt  untitled1.py
.github/workflows/: lint.yml  pytest.yml  wily.yml
.swm/: inertia-tensor-calculations.cu1l4ean.sw.md  swimm.json
XFLR5 exports/: N0009_cg0.245_H1.5_V0.10_T2N_VU0.10_Vv0.03_L0.6.xml
data/: Part2.IGS
data/analysis/: Mobula_T1-16_0 m_s-VLM2.xml
data/output/: Mobula.html  Mobula_sync.html  plot.html  plot_synchronized.html
data/xml/: Mobula.json  Mobula.xml  Mobula2.xml  Mobula_TE.xml  test_sample.json  test_sample.xml  test_xml.json  xML_direct.json
legacy/: FlightSim.py  GUI_UAD.py  IngEconomica.py  PushButtonsText.ui  SolidWorksVBA.py  XFLanalysisimporter.py  _legacy_aero_surface_importer.py  _legacy_airfoil_calculator.py  _legacy_geometry_tools.py  _legacy_main_MBSE.py  main_MBSE.py  tools_resampler.py  tree.py
mathematica/: AreaIntegrals-GreenStokes.nb  Export to Python.nb  InertiaTensorDerivation.nb  ThesisTestRotatingFrames.nb
scripts/: annealing_mesh_gen_sample.py  boltzmann_part2.ipynb  cantileaver_beam.py  demo_particle_simulation.py  demo_voronoi.py  doc_prompter.py  file_leading_edge.py  file_renamer.py  graph_pydot.py  interpolation_applications.py  mc.py  mesh_gen.py  mesh_plots.py  meshing_contours.py  mobula_json.py  parse_mathematica.py  particle_life.py  poc_add_plot_synchronization.py  reflection_plots.py  triangle_prism.py
src/aerodynamics/: airfoil.py  airfoil_polar_features.py  analisis_importer.py  data_structures.py
src/geometry/: aircraft_geometry.py  geometry.py  geometry_processing.py  interpolation.py  intersection.py  meshing.py  planar.py  projections.py  spatial_array.py  stokes_theorem.py  surfaces.py  transformations.py
src/materials/: __init__.py  legacy_materials_library.py  materials_library.py
src/propulsion/: propeller_importer.py
tests/: test_2d_mesh.py  test_annealing_mesh_gen.py  test_area_equivalence.py  test_geometric_algorithms.py  test_intersection_algorithms.py  test_linear_interpolation.py  test_meshing.py  test_spar_creation.py  test_te_gap_algorithm.py  test_xml_parser.py
(+26 files in other folders)
